--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 paho-mqtt = "^1.6.1"
+sentry-sdk = "^1.32.0"
+tomli = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
